--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,12 @@
     "lint:fix": "eslint --fix \"**/*.{js,jsx}\""
   },
   "dependencies": {
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.4",
+    "sort-by": "^0.0.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
